; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci.c_pci_maprange.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci.c_pci_maprange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCIM_BAR_MEM_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @pci_maprange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_maprange(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @PCI_BAR_IO(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 32, i32* %3, align 4
  br label %16

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @PCIM_BAR_MEM_TYPE, align 4
  %11 = and i32 %9, %10
  switch i32 %11, label %15 [
    i32 129, label %12
    i32 130, label %13
    i32 128, label %14
  ]

12:                                               ; preds = %8
  store i32 32, i32* %3, align 4
  br label %15

13:                                               ; preds = %8
  store i32 20, i32* %3, align 4
  br label %15

14:                                               ; preds = %8
  store i32 64, i32* %3, align 4
  br label %15

15:                                               ; preds = %8, %14, %13, %12
  br label %16

16:                                               ; preds = %15, %7
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i64 @PCI_BAR_IO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
